2002-10-12  Andreas Buesching  <crunchy@tzi.de>

	* mpiosh/global.c (commands): removed commands 'put', 'get', 'del'
	and 'exit' and add these to the alias lists of 'mput', 'mget',
	'mdel' and 'quit'. Also add some more aliases to some other
	commands

	* mpiosh/readline.c (mpiosh_readline_comp_cmd): add aliases to
	completion list

	* mpiosh/global.c (commands): use command completion for 'help'
	arguments

	* mpiosh/global.h: add alias list to command struct

	* mpiosh/global.c: new file containing global symbols as the
	command list

	* mpiosh/callback.c: fix compiler warnings

	* libmpio/mpio.c (mpio_memory_format): fixed compiler warning

	* mpiosh/readline.c: new file containing all stuff around the
	readline library
	(mpiosh_readline_comp_mpio_file): doing completion on files of the
	current mpio memory card
	(mpiosh_readline_init): inserted bug fix for the completion
	quoting from Mathieu

2002-10-05  Markus Germeier  <mager@tzi.de>
	* big changes to IO layer and updates to formating/writing
	  for external memory
	* BEWARE: writing to external mem still does not work
	  and I might have damaged the internal support!
	
2002-10-05  Markus Germeier  <mager@tzi.de>

	* libmpio/cis.c: generate new CIS block for formatting

2002-09-30  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.c (mpio_init): fixed identification of
	  newer firmwares (e.g. DMG+)  "MPIOxy" vs. "MPIO-xy"
	  thanks to mathieu for reporting this one.

2002-09-28  Markus Germeier  <mager@tzi.de>

	* kernel/Makefile.am (distclean): added target distclean

2002-09-28  Markus Germeier  <mager@tzi.de>
	* a lot of changes!
	* reading from external memory should work now correctly
	* BEWARE: all write operations are still broken on external mem!

2002-09-24  Markus Germeier  <mager@tzi.de>
	* libmpio/directory.c (mpio_dentry_put): fixed 8.3 handling
	  to allow correct writing of CONFIG.DAT
	  (mpio_dentry_find_name_8_3): fixed handling of given filename