@@ -1,4 +1,4 @@
-$Id: TODO,v 1.14 2002/09/14 09:55:31 crunchy Exp $
+$Id: TODO,v 1.15 2002/10/12 21:18:13 crunchy Exp $
 
 * Kernel Module
   - the MPIO can no multitasking, so:
@@ -31,11 +31,11 @@ $Id: TODO,v 1.14 2002/09/14 09:55:31 crunchy Exp $
 * mpiosh
   - more completion functions
     + command completion [DONE]
-    + correct completion of filenames (quoting)
-    + command option completion
+    + correct completion of filenames (quoting) [DONE]
+    + command option completion [partly DONE]
   - handle regexps in command arguments [DONE]
   - use indices for files as possible arguments for put/get
-  - use shell-like regular expressions
+  - use shell-like regular expressions [DONE]
   - command separator like ';' [DONE]
   - using stdin for reading command sequences [DONE]
   - fill: uses current local directory to fill the current memory card
