@@ -6,13 +6,18 @@ dnl AM_CONFIG_HEADER(src/config.h)
 AC_CANONICAL_SYSTEM()
 AC_MSG_RESULT(Building for a ${host} host.)
 
-AM_INIT_AUTOMAKE(mpio, 0.5.0)
+AM_INIT_AUTOMAKE(mpio, 0.6.0)
 
 dnl Checks for programs.
 
 AC_PROG_MAKE_SET
 AC_PROG_CC
 AM_PROG_LIBTOOL
+
+dnl Checks for header files.
+
+AC_CHECK_HEADER(getopt.h,HAVE_GETOPT_H=1,HAVE_GETOPT_H=0)
+AC_SUBST(HAVE_GETOPT_H)
 
 dnl check for kernel version
 kernel_version=`uname -r 2>&1`
@@ -26,7 +31,7 @@ echo $kernel_version
 if test "$_k_verc_fail" ; then
   echo "  Your kernel version is to old."
   echo "  Please update your system to a kernel version of 2.2.x or higher."
-  AC_ERROR("too old")
+  AC_ERROR(too old)
 fi
 
 MODULE_PATH="/lib/modules/${kernel_version}"
@@ -39,14 +44,24 @@ else
 fi
 
 AC_MSG_RESULT(Using module path ${MODULE_PATH}.)
-
 AC_SUBST(MODULE_PATH)
 AC_SUBST(SPEC_PATH)
 
-dnl Checks for header files.
+KERNEL_INCLUDE=
+if test -d "/usr/src/linux/include"; then
+    KERNEL_INCLUDE="/usr/src/linux/include"
+elif test -d "/usr/src/linux-2.4/include"; then
+    KERNEL_INCLUDE="/usr/src/linux-2.4/include"
+elif test -d "/usr/include/linux"; then
+    KERNEL_INCLUDE="/usr/include/linux"
+fi
 
-AC_CHECK_HEADER(getopt.h,HAVE_GETOPT_H=1,HAVE_GETOPT_H=0)
-AC_SUBST(HAVE_GETOPT_H)
+if test -z ${KERNEL_INCLUDE}; then
+    AC_ERROR(could not find directory of kernel include files)
+else
+    AC_MSG_RESULT(Using kernel includes from ${KERNEL_INCLUDE})
+fi
+AC_SUBST(KERNEL_INCLUDE)
 
 dnl ------------------------------------------------------------
 
